--- a/exercicios/EX026/MQ004/estilos/media-query.css
+++ b/exercicios/EX026/MQ004/estilos/media-query.css
@@ -2,7 +2,7 @@
 
 * {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.3em;
+    font-size: 1.2em;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -13,20 +13,33 @@ html {
 }
 
 body {
-    background: black url(../imagens/back-phone.jpg) no-repeat;
+    background: black url(../imagens/back-phone.jpg);
     background-size: cover;
     background-position: center center;
 }
 
 main {
     background-color: rgba(255, 255, 255, 0.534);
-    width: 90vw;
+    width: 400px;
     margin: auto;
+    margin-top: 20px;
     padding: 10px;
     border-radius: 10px;
 }
 
-img#phone{ display: block;}
+h1 {
+    text-align: center;
+    color: white;
+    font-size: 2em;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.61);
+}
+
+img {
+    display:block;
+    margin: auto;
+}
+
+img#phone{display: block;}
 img#tv {display: none;}
 img#pc {display: none;}
 img#tablet {display: none;} 
